applications/letschat/letschat-app-s2i/lets-chat-dc.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  annotations:
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/geoffrey-pascal/lets-chat.git'
  name: lets-chat-git
  labels:
    app: lets-chat-git
    app.kubernetes.io/component: lets-chat-git
    app.kubernetes.io/instance: lets-chat-git
    app.kubernetes.io/name: lets-chat-git
    app.kubernetes.io/part-of: lets-chat-git-app
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: 14-ubi7
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - lets-chat-git
        from:
          kind: ImageStreamTag
          name: 'lets-chat:latest'
    - type: ConfigChange
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    app: lets-chat-git
    deploymentconfig: lets-chat-git
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: lets-chat-git
        deploymentconfig: lets-chat-git
    spec:
      containers:
        - resources: {}
        - resources: {}
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: lets-chat-git
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
          terminationMessagePolicy: File
          image: lets-chat:latest
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
