applications/letschat/letschat-app-s2i/lets-chat-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lets-chat-git
  name: lets-chat
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
  - port: 8443
    protocol: TCP
    targetPort: 8443
    name: https
  selector:
    app: lets-chat-git
  type: ClusterIP
