applications/letschat/letschat-app-s2i/lets-chat-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: lets-chat
spec:
  to:
    kind: Service
    name: lets-chat
    weight: 100
  port:
    targetPort: http
status:
  ingress: []
